Closed Bug 634436 Opened 15 years ago Closed 15 years ago

"Assertion failure: !tm->profile"

Categories

(Core :: JavaScript Engine, defect)

x86
All
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Unassigned)

References

Details

(Keywords: assertion, regression, testcase, Whiteboard: fixed-in-tracemonkey)

Attachments

(2 files)

Attached file shell testcase
./js -j -m -p t.js Assertion failure: !tm->profile, at js/src/jstracer.cpp:6630
The first bad revision is: changeset: 0d78f2804085 user: Bill McCloskey date: Mon Feb 14 17:54:28 2011 -0800 summary: Bug 633069 - Change how tracejit profiler nesting works (r=gal)
Blocks: 633069
Attached patch fixSplinter Review
Since the patch in bug 633069, this assert is bogus. Also, there was a typo in that patch.
Attachment #512658 - Flags: review?(gal)
Attachment #512658 - Flags: review?(gal) → review+
I've also started seeing this on lots of sites on all platforms.
OS: Mac OS X → All
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Filter on qa-project-auto-change: Bug in removed tracer code, setting in-testsuite- flag.
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: