Bug 634436 - Fix bogus profiler assertion in tracer (r=gal)